# quant.cpp

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.ko.md  README.md  ROADMAP.md  docker-compose.yml  program.md  quant.h  score.sh  tq_convert  tq_run
.claude/: state.md
.claude/commands/: develop.md  harness.md  merge-gate.md  score.md  spawn-team.md
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml
bench/: auto_profile.sh  compare_llamacpp.sh  cow_bench.sh  document_level_rag_test.sh  generate_long_text.py  generation_regression_test.sh  kv_quality_bench.sh  long_context_bench.sh  long_context_ppl_bench.sh  long_context_results.csv  niah_anchor_test.sh  niah_fp32_control.sh  niah_seed_sweep.sh  niah_test.sh  plot_memory.py  ppl_standard.sh  speed_int_vs_float_v2.c  test_age_quant.c  test_head_sensitivity.c  test_svd_kv.c  tq_bench.cpp  tq_quality.cpp
bench/accuracy/: run_longbench.py  run_niah.py  run_ruler.py
bench/data/: ppl_16k.txt  ppl_1k.txt  ppl_4k.txt  ppl_8k.txt
bench/head_to_head/: README.md  run_benchmark.sh  setup_llamacpp.sh
bench/kv_quality_results/: summary.csv
bench/performance/: bench_kernel.cpp  bench_latency.cpp  bench_memory.cpp  bench_throughput.cpp
bench/results/: 2026-04-15_accelerate_gemm_microbench.md  2026-04-15_throughput_vs_llamacpp.md  attention_aware_quantization.md  document_level_rag_breakthrough.md  document_level_rag_report.md  layer_adaptive_analysis.md  long_context_kv_compression.md  progressive_kv_compression.md  real_kv_compression.md  speed_comparison.md  turboquant_reproduction.md
bench/rlv/: README.md  rlv_orchestrator.py
bindings/python/: .gitignore  MANIFEST.in  README.md  example.py  pyproject.toml  quant.h  setup.py  turboquant.py  turboquant_cli.py
bindings/python/quantcpp/: __init__.py  _binding.py  cli.py
bindings/python/tests/: test_python.py
bindings/python/turboquant/: __init__.py  _core.py
build_metal/: CMakeCache.txt  Makefile  cmake_install.cmake  tq_elementwise.air  tq_fused_cache.air  tq_matmul.air  tq_moe_kernel.air  tq_polar.air  tq_qjl.air  tq_turbo.air  tq_value.air  turboquant.metallib
docs/: RELEASE_NOTES.md  announcement_en.md  announcement_ko.md  architecture.md  benchmarks.md  beyond-rag-manifesto.md  custom-quantization.md  docker.md  integration_guide.md  phase3_rlv_challenge.md  positioning.md  prd_v0.1.md  prd_v0.2.md  prd_v0.3.md  prd_v0.4.md  prd_v0.6.md  promotion-strategy-v0.12.md  qwen35_validation_results.md  real_model_results.md  refs_audit_v0.2.md  strategy_progressive_kv.md  supported_models.md  technical_report.md  wbs_v0.1.md  wbs_v0.2.md  wbs_v0.3.md  wbs_v0.4.md  wbs_v0.6.md
docs/blog/: breaking-3bit-barrier.md  kv-cache-landscape.md
docs/dev/: batched_prefill_handoff.md
docs/feedback/: 2026-04-12_0900.md
docs/paper/: arxiv-metadata.md  build.sh  hf-blog-draft.md  md2tex.py  twitter-thread.md  working-memory-cliff.md  working-memory-cliff.tex
docs/papers/: progressive_kv_compression_en.md  progressive_kv_compression_ko.md  quant_cpp_arxiv_draft.md  quant_cpp_tech_report.md  turboquant_deep_dive.md
docs/plan/: phase_a2_large_doc_guide.md  pivot_plan.md  rlv_day5_m3_plan.md  rlv_roadmap_v2.md
docs/pr/: 2026-03-31-hackernews-ko.md  2026-03-31-hackernews.md  2026-03-31-reddit-localllama-ko.md  2026-03-31-reddit-localllama.md  2026-04-01-what-we-achieved-ko.md  2026-04-01-what-we-achieved.md  2026-04-03-reddit-responses.md  2026-04-05-localllama-single-header-responses.md  2026-04-05-localllm-turboquant-responses.md  2026-04-06-localllama-single-header-responses-v2.md  2026-04-06-reddit-comparison-chart-responses.md  2026-04-08-reddit-v071-parity-ko.md  2026-04-08-reddit-v071-parity.md  2026-04-09-awesome-list-prs.md  2026-04-09-llama-cpp-pr-draft.md  2026-04-09-reddit-v081-pip-install-ko.md  2026-04-09-reddit-v081-pip-install.md  2026-04-10-reddit-progressive-kv.md  2026-04-11-reddit-working-memory-cliff-ko.md  2026-04-11-reddit-working-memory-cliff.md  2026-04-12-v013-reddit-post.md
docs/spikes/: 2026-04-12_phi3_support.md
examples/: README.md  ab_test.c  benchmark_types.cpp  demo_real_model.c  embed_chat.c  embed_kv_compare.c  embed_minimal.c  llamacpp_integration.cpp  long_context_qa.py  minimal.c  python_quickstart.py  qwen35_inference_demo.py  server_example.sh  single_header_example.c  standalone.c
harness/: run.sh  team.toml
include/turboquant/: tq_engine.h  tq_gguf.h  tq_spec.h  tq_types.h  turboquant.h
integrations/llamacpp/: README.md  tq_ggml_type.h  tq_kv_cache.cpp
integrations/vllm/: README.md  tq_cache_engine.py
scripts/: check_stale.sh  check_sync.sh  test_long_seq.sh  test_models.sh  test_prefill.sh
site/: index.html
spec/: tq_format_v1.md  tq_operators_v1.md
spec/test_vectors/: README.md
src/cache/: tq_paged_cache.c  tq_progressive.c
src/core/: tq_context.c  tq_mixed.c  tq_polar.c  tq_qjl.c  tq_rht.c  tq_traits.c  tq_turbo.c  tq_turbo_kv.c  tq_uniform.c  tq_value_quant.c
src/engine/: tq_adaptive.c  tq_generate.c  tq_gguf.c  tq_gguf_quants.c  tq_model.c  tq_moe.c  tq_ops.c  tq_tokenizer.c  tq_transformer.c
src/server/: tq_server.c  tq_server.h
tests/: test_adaptive.cpp  test_attention_all_types.cpp  test_attention_distribution.cpp  test_codebook_theory.cpp  test_cumulative_error.cpp  test_edge_cases.cpp  test_gguf_moe.cpp  test_head_sensitivity.cpp  test_kv_asymmetric.cpp  test_mixed.cpp  test_multihash_dim64.cpp  test_neon_scalar.cpp  test_ops.cpp  test_paged_cache.cpp  test_polar.cpp  test_progressive.cpp  test_qjl.cpp  test_rate_distortion.cpp  test_rht.cpp  test_simd_avx2.cpp  test_simd_neon.cpp  test_threading.cpp  test_turbo.cpp  test_turbo_kv.cpp  test_uniform.cpp  test_value.cpp
tests/reference/: dump_real_kv_cache.py  generate_test_vectors.py  polar_quant_ref.py  qjl_ref.py  (+1 more)
tools/: gguf_inspect.c  phi3_infer_test.c  quant.c  quant_server_unified.c  test_batched_matmul.c  tq  tq_chat.py  tq_convert.c  tq_run.c
wasm/: build.sh  coi-serviceworker.js  index.html  quant.js  quant.wasm  quant_wasm.c
(+68 files in other folders)
