[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantcpp"
version = "0.8.0"
description = "Single-header LLM inference engine with KV cache compression (7× compression at fp32 parity)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "quantumaikr", email = "noreply@quantumaikr.com" },
]
keywords = [
    "llm", "inference", "quantization", "kv-cache",
    "compression", "gguf", "embedded", "single-header",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage      = "https://github.com/quantumaikr/quant.cpp"
Documentation = "https://github.com/quantumaikr/quant.cpp#readme"
Source        = "https://github.com/quantumaikr/quant.cpp"
Issues        = "https://github.com/quantumaikr/quant.cpp/issues"
Changelog     = "https://github.com/quantumaikr/quant.cpp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[tool.setuptools.packages.find]
include = ["quantcpp*"]

[tool.setuptools.package-data]
quantcpp = ["_quant.h", "*.so", "*.dylib", "*.dll"]

# ---------------------------------------------------------------------------
# cibuildwheel — pre-built binary wheels for PyPI
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip  = "*-musllinux_i686 *-manylinux_i686 pp*"

# Verify the bundled header is in place before building
before-build = "python -c \"import shutil, os; src='../../quant.h'; dst='quantcpp/_quant.h'; (os.path.exists(src) and shutil.copyfile(src, dst)) or (os.path.exists(dst) or (_ for _ in ()).throw(FileNotFoundError(dst)))\""

# Smoke-test the built wheel before publishing
test-command = "python -c \"import quantcpp; print('quantcpp', quantcpp.__version__)\""

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]
